Optimize NoteButton’s layout thrashing

--- a/notes/src/components/NoteButton/index.css
+++ b/notes/src/components/NoteButton/index.css
@@ -48,6 +48,7 @@
   display: block;
   white-space: nowrap;
   overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .notes-list__note-header_overflowing {
